# kbmod2dbase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/kbmod2dbase/: __init__.py  kbmod2tnodb.py  linker.py  main.py  reader.py
test/: discovery_test_data.det  test_reader.py  tracking_test_data.det
